--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.20' # Replace with your Go version
+          go-version: '1.23.2'
 
       - name: Cache Go modules
         uses: actions/cache@v3
@@ -35,7 +35,6 @@ jobs:
       - name: Prepare test environment
         run: |
           mkdir -p /tmp
-          cp testdata/test.torrent /tmp/test.torrent
 
       - name: Run tests
         run: make test
