--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -29,6 +29,20 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
 
+      - name: Install X11 and OpenGL dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            libgl1-mesa-dev \
+            libx11-dev \
+            libxrandr-dev \
+            libxxf86vm-dev \
+            libxi-dev \
+            libxcursor-dev \
+            libxinerama-dev \
+            libglfw3-dev \
+            xorg-dev
+
       - name: Install dependencies
         run: go mod download
 
